--- a/src/ui/components/atoms/Card/card.css
+++ b/src/ui/components/atoms/Card/card.css
@@ -1,16 +1,34 @@
 .rmt-card {
 	max-width: 200px;
+	height: 255px;
+	display: flex;
+	flex-direction: column;
 	padding: 5px;
-	background-color: var(--negro);
-	color: rgb(245, 245, 245);
 	border-radius: 3px;
+	color: var(--white);
+	background-color: var(--black);
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
 .rmt-card:hover {
-	background-color: #5383e8;
+	background-color: var(--blue);
 }
 
 .rmt-card__header {
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	padding: 5px 0 5px 0;
+}
+
+.rmt-card__title {
+	font-size: var(--font-size-medium);
+	text-align: center;
+}
+
+.rmt-card__title--small {
+	font-size: var(--font-size-small);
 }
 
 .rmt-card__img {
