--- a/src/ui/components/molecules/Navbar/navbar.css
+++ b/src/ui/components/molecules/Navbar/navbar.css
@@ -2,3 +2,15 @@
 	display: flex;
 	gap: 20px;
 }
+
+.rmt-navbar__link {
+	padding: 15px;
+	color: var(--white);
+	border-radius: 5px;
+	font-weight: 700;
+	font-size: 1rem;
+}
+
+.rmt-navbar__link.active {
+	color: goldenrod;
+}
