--- a/src/ui/components/molecules/CardSkeleton/cardSkeleton.css
+++ b/src/ui/components/molecules/CardSkeleton/cardSkeleton.css
@@ -14,11 +14,9 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background: #eee;
-}
-
-.rmt-card-skeleton__img {
-	width: 50px;
+	background: linear-gradient(110deg, #ececec 8%, #f5f5f5 18%, #ececec 33%);
+	background-size: 200% 100%;
+	animation: 1.5s shine linear infinite;
 }
 
 .rmt-card-skeleton__header {
@@ -32,8 +30,8 @@
 	width: 139px;
 	height: 22px;
 	background: #eee;
-	background: linear-gradient(110deg, #ececec 8%, #f5f5f5 18%, #ececec 33%);
 	border-radius: 5px;
+	background: linear-gradient(110deg, #ececec 8%, #f5f5f5 18%, #ececec 33%);
 	background-size: 200% 100%;
 	animation: 1.5s shine linear infinite;
 }
