--- a/src/ui/components/molecules/CardSkeleton/cardSkeleton.css
+++ b/src/ui/components/molecules/CardSkeleton/cardSkeleton.css
@@ -1,6 +1,4 @@
 .rmt-card-skeleton {
-	width: 200px;
-	height: 255px;
 	display: flex;
 	flex-direction: column;
 	padding: 5px;
@@ -9,21 +7,20 @@
 }
 
 .rmt-card-skeleton__media {
-	width: 190px;
-	height: 190px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	padding-top: 100%;
+	position: relative;
+	border-radius: 1px;
 	background: linear-gradient(110deg, #ececec 8%, #f5f5f5 18%, #ececec 33%);
 	background-size: 200% 100%;
 	animation: 1.5s shine linear infinite;
 }
 
 .rmt-card-skeleton__header {
+	height: 50px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	flex: 1;
+	padding: 5px 0 5px 0;
 }
 
 .rmt-card-skeleton__title {
