Refactor Header and Navbar styles to be responsive

--- a/src/ui/components/molecules/Navbar/navbar.css
+++ b/src/ui/components/molecules/Navbar/navbar.css
@@ -1,10 +1,10 @@
 .rmt-navbar {
 	display: flex;
 	gap: 20px;
+	align-items: center;
 }
 
 .rmt-navbar__link {
-	padding: 15px;
 	color: var(--white);
 	border-radius: 5px;
 	font-weight: 700;
