--- a/src/ui/components/molecules/Filters/filters.css
+++ b/src/ui/components/molecules/Filters/filters.css
@@ -3,7 +3,6 @@
 	flex-direction: column;
 	justify-content: center;
 	gap: 15px;
-	min-width: 300px;
 	background-color: var(--white);
 	border-radius: 3px;
 	padding: 20px;
@@ -30,4 +29,10 @@
 .rmt-filters__label {
 	text-transform: uppercase;
 	font-size: 0.9rem;
+}
+
+@media (min-width: 992px) {
+	.rmt-filters {
+		min-width: 300px;
+	}
 }
