--- a/src/ui/components/atoms/Card/card.css
+++ b/src/ui/components/atoms/Card/card.css
@@ -3,8 +3,8 @@
 	flex-direction: column;
 	padding: 5px;
 	border-radius: 3px;
-	color: var(--white);
-	background-color: var(--black);
+	color: var(--primary-color);
+	background-color: var(--secondary-color);
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
 	animation-duration: 0.75s;
@@ -13,7 +13,7 @@
 }
 
 .rmt-card:hover {
-	background-color: var(--blue);
+	background-color: var(--tertiary-color);
 }
 
 .rmt-card__header {
