--- a/src/ui/components/molecules/Navbar/navbar.css
+++ b/src/ui/components/molecules/Navbar/navbar.css
@@ -5,7 +5,7 @@
 }
 
 .rmt-navbar__link {
-	color: var(--white);
+	color: var(--primary-color);
 	border-radius: 5px;
 	font-weight: 700;
 	font-size: 1rem;
