--- a/src/ui/components/molecules/Card/card.css
+++ b/src/ui/components/molecules/Card/card.css
@@ -3,17 +3,20 @@
 	flex-direction: column;
 	padding: 5px;
 	border-radius: 3px;
-	color: var(--primary-color);
-	background-color: var(--secondary-color);
+	color: var(--white);
+	background-color: var(--black);
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
 	animation-duration: 0.75s;
 	animation-name: animate-glow;
 	animation-timing-function: ease;
+
+	transition: transform 0.2s;
 }
 
 .rmt-card:hover {
-	background-color: var(--tertiary-color);
+	color: var(--gold);
+	transform: scale(1.04);
 }
 
 .rmt-card__header {
@@ -22,12 +25,12 @@
 	align-items: center;
 	justify-content: center;
 	padding: 5px 0 5px 0;
+	overflow: hidden;
 }
 
 .rmt-card__title {
 	font-size: var(--font-size-medium);
 	text-align: center;
-	overflow: hidden;
 	display: -webkit-box;
 	-webkit-box-orient: vertical;
 	-webkit-line-clamp: 2;
