--- a/src/ui/components/molecules/Filters/filters.css
+++ b/src/ui/components/molecules/Filters/filters.css
@@ -1,38 +1,93 @@
-.rmt-filters {
+.rmt-filters-form {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	gap: 15px;
-	background-color: var(--primary-color);
+	background-color: var(--darker-white);
 	border-radius: 3px;
 	padding: 20px;
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-.rmt-filters__search-input {
+.rmt-filters-form__search-input {
 	width: 100%;
-	background-color: white;
+	background-color: var(--pure-white);
+	color: var(--black);
 	border-radius: 3px;
 	padding: 15px;
 	font-weight: 600;
+	border: 2px solid var(--pure-white);
 }
 
-.rmt-filters__select-input {
+.rmt-filters-form__search-input:hover {
+	border: 2px solid var(--black);
+}
+
+.rmt-filters-form__search-input:focus {
+	outline-color: var(--black);
+}
+
+.rmt-filters-form__select-input {
 	width: 100%;
-	background-color: white;
+	background-color: var(--pure-white);
+	color: var(--black);
 	border-radius: 3px;
 	padding: 15px;
 	appearance: auto;
 	font-weight: 600;
+	border: 2px solid var(--pure-white);
 }
 
-.rmt-filters__label {
+.rmt-filters-form__select-input:hover {
+	width: 100%;
+	background-color: var(--pure-white);
+	color: var(--black);
+	border-radius: 3px;
+	padding: 15px;
+	appearance: auto;
+	font-weight: 600;
+	border: 2px solid var(--black);
+}
+
+.rmt-filters-form__select-input:focus {
+	outline-color: var(--black);
+}
+
+.rmt-filters-form__label {
 	text-transform: uppercase;
-	font-size: 0.9rem;
+	font-size: 0.8rem;
+	color: var(--lights-lategrey);
+	pointer-events: none;
+}
+
+.rmt-filters-form__reset-button {
+	padding: 15px;
+	background-color: var(--grey);
+	color: var(--black);
+	border-radius: 3px;
+	font-weight: 600;
+	cursor: pointer;
+}
+
+.rmt-filters-form__reset-button:hover {
+	background-color: var(--darker-grey);
+}
+
+.rmt-filters-form__submit-button {
+	padding: 15px;
+	background-color: var(--black);
+	color: var(--pure-white);
+	border-radius: 3px;
+	font-weight: 600;
+	cursor: pointer;
+}
+
+.rmt-filters-form__submit-button:hover {
+	background-color: #292929;
 }
 
 @media (min-width: 992px) {
-	.rmt-filters {
+	.rmt-filters-form {
 		min-width: 300px;
 	}
 }
