--- a/src/ui/components/molecules/Navbar/navbar.css
+++ b/src/ui/components/molecules/Navbar/navbar.css
@@ -5,12 +5,15 @@
 }
 
 .rmt-navbar__link {
-	color: var(--primary-color);
+	color: var(--white);
 	border-radius: 5px;
 	font-weight: 700;
 	font-size: 1rem;
 }
+.rmt-navbar__link:hover {
+	color: var(--gold);
+}
 
 .rmt-navbar__link.active {
-	color: goldenrod;
+	color: var(--gold);
 }
