--- a/src/ui/components/organisms/Header/header.css
+++ b/src/ui/components/organisms/Header/header.css
@@ -4,8 +4,8 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-color: var(--secondary-color);
-	color: var(--primary-color);
+	background-color: var(--black);
+	color: var(--white);
 }
 
 .rmt-header__logo-section {
@@ -36,5 +36,7 @@
 @media (min-width: 576px) {
 	.rmt-header__title {
 		visibility: visible;
+		font-weight: 600;
+		font-size: 1.1rem;
 	}
 }
