--- a/src/ui/components/organisms/Header/header.css
+++ b/src/ui/components/organisms/Header/header.css
@@ -12,7 +12,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	gap: var(--gutter);
+	gap: var(--spacing-16);
 }
 
 .rmt-header__logo {
@@ -26,7 +26,7 @@
 	display: flex;
 	justify-content: space-between;
 	flex: 1;
-	padding: 0 var(--gutter);
+	padding: 0 var(--spacing-16);
 }
 
 .rmt-header__title {
