--- a/src/ui/components/pages/Results/results.css
+++ b/src/ui/components/pages/Results/results.css
@@ -16,7 +16,7 @@
 }
 
 .rmt-results-page__aside {
-	padding: var(--gutter);
+	padding: var(--spacing-16);
 }
 
 .rmt-results-page__list {
@@ -24,8 +24,18 @@
 	flex-wrap: wrap;
 }
 
+.rmt-results-page__results-info {
+	padding: var(--spacing-16);
+}
+
+.rmt-results-page__text {
+	text-align: center;
+	font-size: 1.5rem;
+	line-height: 2rem;
+}
+
 .rmt-results-page__list-item {
-	padding: var(--gutter);
+	padding: var(--spacing-16);
 	-webkit-box-flex: 0;
 	-ms-flex: 0 0 50%;
 	flex: 0 0 50%;
